--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,15 @@
 .header{
+    position: sticky;
+    top: 0;
+    backdrop-filter: blur(10px);
+    padding-inline-start: 15px;
+    padding-inline-end: 15px;
+}
+
+.header-content{
     display: flex;
     justify-content: space-between;
     align-items: center;
     block-size: 80px;
+    
 }
