--- a/css/perfil.css
+++ b/css/perfil.css
@@ -27,4 +27,38 @@
 
 .hero-foto{
     border-radius: 30px;
+    
+}
+
+.hero-foto img{
+    max-inline-size: 100%;
+    block-size: auto;
+}
+
+@media screen and (min-width: 768px){
+    .hero{
+        display: flex;
+        gap: 32px;
+    }
+
+    .hero-description{
+        order: 1;
+        max-inline-size: 450px;
+    }
+
+    .hero-image{
+        order: 2;
+        text-align: end;
+        flex: 1;
+    }
+
+    
+}
+
+@media screen and (min-width: 1024px){
+
+    .hero-foto {
+        inline-size: 500px;
+        block-size: 504px;
+    }
 }
